fix: inline code font was too big, asset copied everything but css, added favicon

--- a/assets/index.css
+++ b/assets/index.css
@@ -37,8 +37,7 @@ m|mtext {
     font-family: Noto-Serif, serif;
 }
 
-pre,
-code {
+pre {
     font-size: 11pt;
     overflow-x: scroll;
 }
